--- a/src/assets/css/Footer.css
+++ b/src/assets/css/Footer.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     position: absolute;
-    bottom: 5vh;
+    bottom: 2vh;
     left: 46vw;
 }
 
@@ -24,25 +24,23 @@
 
 .round {
     position: relative;
-    border: 3px solid #fff;
-    width: 35px;
-    height: 35px;
+    width: 4vw;
+    height: 10vh;
     border-radius: 100%;
 }
 
 span {
     z-index: 999;
-    height: 3px;
-    margin: 1px;
-    width: 15px;
+    height: 5px;
+    width: 25px;
     background: #fff;
-    transition: 0.4s ease;
+    transition: 0.7s ease;
 }
 
 span:first-child {
     display: block;
     position: absolute;
-    transform: rotate(45deg);
+    transform: rotate(43deg);
     left: 15%;
     bottom: 30%;
 }
@@ -50,15 +48,15 @@ span:first-child {
 span:nth-child(2) {
     display: block;
     position: absolute;
-    transform: rotate(-45deg);
-    left: 37%;
+    transform: rotate(-48deg);
+    left: 43%;
     bottom: 30%;
 }
 
 span:nth-child(3) {
     display: block;
     position: absolute;
-    transform: rotate(45deg);
+    transform: rotate(43deg);
     left: 15%;
     bottom: 54%;
 }
@@ -66,8 +64,8 @@ span:nth-child(3) {
 span:nth-child(4) {
     display: block;
     position: absolute;
-    transform: rotate(-45deg);
-    left: 38%;
+    transform: rotate(-48deg);
+    left: 42%;
     bottom: 55%;
 }
 
