--- a/src/assets/css/Habilidades.css
+++ b/src/assets/css/Habilidades.css
@@ -1,10 +1,12 @@
 .Habilits {
-    height:85vh;
+    height:100vh;
     max-width: 100vw;
     color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image: url(../IMG/Group6.png);
+    background-repeat: round;
 }
 
 
